--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "discord.js-commando": "^0.10.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
+    "ffmpeg-static": "^2.5.0",
     "nba.js": "^0.6.1",
+    "node-opus": "^0.3.2",
     "opusscript": "0.0.7",
+    "simple-youtube-api": "^5.2.1",
     "weather-js": "^2.0.0",
     "ytdl-core": "^0.29.5"
   }
